@@ -4,8 +4,9 @@ dnsmasq (2.73-1) unstable; urgency=low
    * Tweak field width in cache dump to avoid truncating IPv6
      addresses. (closes: #771557)
    * Add newline at the end of example config file. (LP: #1416895)
+   * Make Debian package build reproducible. (closes: #777323)
 
- -- Simon Kelley <simon@thekelleys.org.uk>  Fri, 03 Oct 2014 08:49:42 +0000
+ -- Simon Kelley <simon@thekelleys.org.uk>  Mon, 09 Feb 2015 11:50:42 +0000
 
 dnsmasq (2.72-2) unstable; urgency=low
 
